# scripts

./: README.md  builder.py  git-stack-slice  gputest.py  pyproject.toml  setup.sh  ssh-key.sh  transcrypt  transcrypt.py
builder/: README.md  __init__.py  build.py  cli.py  command_runner.py  config_loader.py  environment.py  git_manager.py  presets.py  template.py
builder/docs/: build.md  config.md  git.md
builder/src/: __init__.py  build.py  cli.py  command_runner.py  config_loader.py  environment.py  git_manager.py  presets.py  template.py  toolchains.py  validation.py
builder/src/builder/: build.py  git_manager.py  presets.py  template.py
builder/tests/: __init__.py  test_build_engine.py  test_cli_build.py  test_cli_list.py  test_cli_update.py  test_cli_validate.py  test_config_loader.py  test_git_manager.py  test_presets.py  test_submodules.py  test_template.py
common/: amdgpu-profile.sh  detect.sh  detect_vps.sh  get-root-passphrase.sh  proxy.sh  tags.sh  unproxy.sh
core/: __init__.py  archive.py  command_runner.py  config_loader.py  template.py
docs/: build.md  config.md  git.md
git-hooks/core/: lib.sh  runner
git-hooks/pre-commit.d/: encoding
git-hooks/pre-push.d/: warn-protected
git-hooks/reference-transaction.d/: cleanup-build-dir
git/hooks/: README.md  prepare-commit-msg  reference-transaction
git/hooks/core/: dispatch.sh  lib.sh  runner
git/hooks/docs/: design.md  guide.md
git/hooks/post-applypatch.d/: 00-git-branchless
git/hooks/post-checkout.d/: 00-branchless-init  01-git-branchless  20-git-lfs  80-workspace-restore  85-check-dependencies  90-maintenance  setup-tools
git/hooks/post-commit.d/: 00-git-branchless
git/hooks/post-merge.d/: 00-git-branchless  85-check-dependencies
git/hooks/post-rewrite.d/: 00-git-branchless
git/hooks/pre-auto-gc.d/: 00-git-branchless  git-branchless
git/hooks/pre-commit.d/: 10-warn-protected  15-block-checks  15-sanity-checks  20-sanity-checks  25-block-checks  30-encoding  40-secret-scan  50-code-formatter  50-format-clang  (+13 more)
git/tools/: git-setup-remotes  git-stack  git-stack-slice  git-transcrypt
gputest/config/: test_config.toml
gputest/docs/: REFACTOR_PLAN.md
gputest/src/: __init__.py  cleanup.py  context.py  list_cmd.py  restore.py  runner.py  toolbox.py  utils.py
gputest/tests/: __init__.py  test_cleanup.py  test_restore.py  test_runner.py
services/: daily.sh  develop-autostart.sh  nightly.sh  runner.sh
services/autostart/: 01-create_terminal.sh  01-power_management.sh  20-mount_samba.sh  80-copy_gpu_tests.sh
services/daily/: 00-update-system.sh  01-update-projects.sh  99-gpu_test-wrapper.sh
services/nightly/: 01-update-projects.sh
setup/: beautify.sh  runner.sh
setup/install/: debian-dev.sh  opensuse-amdgpu.sh  opensuse-dev.sh
tests/: test_build_engine.py  test_cli_build.py  test_cli_list.py  test_cli_update.py  test_config_loader.py  test_git_manager.py  test_presets.py  test_submodules.py  test_template.py
wf/: README.md  meson.build
wf/docs/: crypt.md
wf/src/: cli.zig  main.zig
wf/src/cmd/: builder.zig  crypt.zig  gpu.zig  remote.zig  stack.zig
wf/src/core/: config.zig  crypto.zig  git.zig  log.zig  process.zig
wf/subprojects/: .gitignore  yazap.wrap  zig-toml.wrap
wf/subprojects/packagefiles/yazap/: meson.build
wf/subprojects/packagefiles/zig-toml/: meson.build
workflow/: builder.py  git_stack.py  gputest.py  setup_remotes.py  transcrypt.py
workflow-rs/: Cargo.toml  README.md  meson.build
workflow-rs/crates/wits/: Cargo.toml
workflow-rs/crates/wits-util/: Cargo.toml
workflow-rs/crates/wits-util/src/: config.rs  crypto.rs  git.rs  lib.rs  log.rs  process.rs  remote.rs  resolver.rs  system.rs  template.rs
workflow-rs/crates/wits-util/src/build_system/: cargo.rs  cmake.rs  meson.rs  mod.rs
workflow-rs/crates/wits-util/src/forge/: gitea.rs  github.rs  gitlab.rs  mod.rs  review.rs  transport.rs
workflow-rs/crates/wits-util/src/git/: floor.rs  mod.rs  repository.rs  worktree.rs
workflow-rs/crates/wits-util/src/project/: context.rs  git.rs  mod.rs  model.rs  presets.rs  resolve.rs  sys.rs  toolchain.rs  workspace.rs
workflow-rs/crates/wits/src/: main.rs
workflow-rs/crates/wits/src/cmd/: build.rs  mod.rs  system.rs  transcrypt.rs  update.rs
workflow-rs/crates/wits/src/cmd/project/: context.rs  mod.rs
workflow-rs/crates/wits/src/cmd/review/: checkout.rs  comment.rs  config.rs  diff.rs  fetch.rs  mod.rs  model.rs  prune.rs  show.rs  store.rs  submit.rs
workflow-rs/crates/wits/src/cmd/stack/: anno.rs  decorate.rs  mod.rs  resolution.rs  slice.rs  submit.rs  sync.rs  tree.rs
workflow-rs/crates/wits/tests/cmd/: review.rs  transcrypt.rs
workflow-rs/docs/: core.md  plugins.md  project.md  review.md  stack.md  transcrypt.md
workflow-rs/docs/project/: design.md  reference.md
workflow-rs/docs/review/: design.md  json.md  redesign.md  store.md
workflow-rs/docs/stack/: behavior.md  design.md
workflow-rs/src/: cli.rs  main.rs
workflow-rs/src/cmd/: build.rs  builder.rs  crypt.rs  gpu.rs  mod.rs  remote.rs  stack.rs  transcrypt.rs  update.rs
workflow-rs/src/cmd/project/: build.rs  context.rs  git.rs  mod.rs  model.rs  resolve.rs  update.rs  workspace.rs
workflow-rs/src/cmd/project/backend/: cargo.rs  cmake.rs  meson.rs  mod.rs
workflow-rs/src/cmd/stack/: anno.rs  decorate.rs  mod.rs  resolution.rs  slice.rs  submit.rs  sync.rs  topology.rs  tree.rs
workflow-rs/src/core/: config.rs  crypto.rs  git.rs  log.rs  mod.rs  process.rs  resolver.rs  template.rs
workflow-rs/src/util/: mod.rs  remote.rs
workflow-rs/src/util/build_system/: cargo.rs  cmake.rs  meson.rs  mod.rs
workflow-rs/src/util/forge/: gitea.rs  github.rs  gitlab.rs  mod.rs
workflow-rs/src/util/project/: mod.rs  resolve.rs  workspace.rs
workflow-rs/tests/: transcrypt_cli.rs
workflow-rs/tests/cmd/: transcrypt.rs
workflow/builder/: __init__.py
workflow/core/: __init__.py  archive.py  command_runner.py  config_loader.py  crypto.py  git_api.py  git_remotes.py  template.py
workflow/git-hooks/: README.md  post-checkout
workflow/git_stack/: cli.py
(+179 files in other folders)
