[package]
name = "wf"
version = "0.1.0"
edition = "2021"
description = "Unified Workflow CLI — a high-performance, unified rewrite of the Python-based workflow tools"
license = "MIT"

[[bin]]
name = "wf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

anyhow = "1"
thiserror = "2"
log = "0.4"

# Cryptography (RustCrypto). The cipher/KDF/hash spread is wider than the
# defaults because old ciphertexts may have been written with any of them, and
# we have to be able to read them back.
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
argon2 = "0.5"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
